--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,13 @@
 ---
-layout: default
+layout: sidebar
 ---
-<div class="post">
 
+<article class="post">
   <header class="post-header">
     <h1>{{ page.title }}</h1>
-    <p class="meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+    <p class="post-meta">{{ page.date | date: site.date_format }}</p>
   </header>
 
-  <article class="post-content">
-  {{ content }}
-  </article>
 
-</div>
+  {{ content }}
+</article>
