--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,12 +2,5 @@
 layout: sidebar
 ---
 
-<article class="post">
-  <header class="post-header">
-    <h1>{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: site.date_format }}</p>
-  </header>
-
-
-  {{ content }}
-</article>
+{% assign post = page %}
+{% include post.html %}
