Add more subtle styling for unordered lists

--- a/_layouts/sidebar.html
+++ b/_layouts/sidebar.html
@@ -28,7 +28,7 @@ layout: default
 
     <section>
       <b>Elsewhere</b>
-      <ul class="contact-links">
+      <ul class="nav-list contact-links">
         <li><a href="https://www.twitter.com/{{ site.username.twitter }}">twitter</a></li>
         <li><a href="https://www.github.com/{{ site.username.github }}">github</a></li>
         <li><a href="mailto:{{ site.email }}">email</a></li>
