Only show post excerpts on main page

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -9,4 +9,8 @@
     {{ content }}
   </section>
 
+  {% if excerpt %}
+    <a href="{{ post.url }}">Read more&hellip;</a>
+  {% endif %}
+
 </article>
