--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,7 +1,7 @@
 
 <article class="post">
   <header class="post-header">
-    <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
+    <h1><a href="{{ post.url }}">{{ post.title | markdownify }}</a></h1>
     <p class="post-meta">{{ post.date | date: site.date_format }}</p>
   </header>
 
