Add keybase link to sidebar

--- a/_layouts/sidebar.html
+++ b/_layouts/sidebar.html
@@ -31,6 +31,7 @@ layout: default
       <ul class="nav-list contact-links">
         <li><a href="https://www.twitter.com/{{ site.username.twitter }}">twitter</a></li>
         <li><a href="https://www.github.com/{{ site.username.github }}">github</a></li>
+        <li><a href="https://keybase.io/{{ site.username.keybase }}">github</a></li>
         <li><a href="mailto:{{ site.email }}">email</a></li>
       </ul>
     </section>
