feat: Update look a bit

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,13 +13,12 @@
         <link rel="stylesheet" href="/css/sourcecode.css">
 
         <link rel="stylesheet" href="/css/fonts/charter/webfont.css"> <!-- LICENSE: /css/fonts/charter/license.txt -->
-        <link rel="stylesheet" href="/css/fonts/sourcesans/webfont.css"> <!-- LICENSE: /css/fonts/sourcesans/license.txt -->
         <link rel="stylesheet" href="/css/fonts/sourcecode/webfont.css"> <!-- LICENSE: /css/fonts/sourcecode/license.txt -->
     </head>
     <body>
       <div class="container">
         <div class="row">
-          <div class="col-md-10 col-md-push-1">
+          <div class="col-md-12">
             {% include header.html %}
 
             {{ content }}
