--- a/css/jumoel.scss
+++ b/css/jumoel.scss
@@ -6,13 +6,23 @@ $brand-color: #3498db;
 $brand-color-accent: #8e44ad;
 
 $serif-stack: "charter", Garamond, serif;
-$sans-serif-stack: "source-sans", "Helvetica Neue", Helvetica, Arial;
+$sans-serif-stack: "-apple-system",
+               BlinkMacSystemFont,
+               "Segoe UI",
+               Roboto,
+               Oxygen,
+               Ubuntu,
+               Cantarell,
+               "Open Sans",
+               "Helvetica Neue",
+               "Helvetica",
+               sans-serif;
 
 body {
   margin: 0.5em 0 2em;
 
   font-family: $serif-stack;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 1.4em;
   color: $text-color;
   background-color: #ecf0f1;
@@ -43,6 +53,7 @@ ol {
 .container {
   border-top: 5px solid $brand-color;
   background-color: #fff;
+  padding: 1rem 4rem;
 
   box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.26);
 }
@@ -69,6 +80,7 @@ code {
   color: #5B6153;
   position: relative;
   margin: auto -2px;
+  letter-spacing: -0.02em;
 }
 
 h1 code {
@@ -85,6 +97,7 @@ pre {
   background-color: transparent;
   border-width: 0px;
   border-radius: 0px;
+  tab-size: 2;
 }
 
 .header-site {
@@ -143,7 +156,9 @@ pre {
 
 .post {
   h2 {
+    font-weight: bold;
     font-size: 24px;
+    font-family: $sans-serif-stack;
   }
 }
 
