feat: Add new leadgen section to the sidebar

--- a/_layouts/sidebar.html
+++ b/_layouts/sidebar.html
@@ -32,8 +32,16 @@ layout: default
         <li><a href="https://www.twitter.com/{{ site.username.twitter }}">twitter</a></li>
         <li><a href="https://www.github.com/{{ site.username.github }}">github</a></li>
         <li><a href="https://keybase.io/{{ site.username.keybase }}">keybase</a></li>
-        <li><a href="mailto:{{ site.email }}">email</a></li>
+        <li><a href="https://linkedin.com/in/{{ site.username.linkedin }}">linkedin</a></li>
       </ul>
+    </section>
+
+    <section class="hire-me">
+      <b>Need work done with React?</b>
+
+      <p>
+        I'm available for freelancing and consulting. Send a line to <a href="mailto:hire@jumoel.com">hire@jumoel.com</a> to get in touch.
+      </p>
     </section>
   </nav>
 </section>
