--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,1 @@
-<div class="row">
-  <header class="header-site col-md-12">
-    <h1><a href="/">jumoel.com</a></h1>
-  </header>
-</div>
+<h1><a href="/">Julian Møller Ellehauge</a></h1>
