--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,5 @@
 ---
-layout: sidebar
+layout: default
 ---
 
-{% assign post = page %}
-{% include post.html %}
+{% assign post = page %} {% include post.html %}
