--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,8 +1,7 @@
-
-<article class="post">
-  <header class="post-header">
+<article class="blog-post">
+  <header>
     <h1><a href="{{ post.url }}">{{ post.title | markdownify }}</a></h1>
-    <p class="post-meta">{{ post.date | date: site.date_format }}</p>
+    <p class="meta">{{ post.date | date: site.date_format }}</p>
   </header>
 
   <section class="post-content">
@@ -10,7 +9,6 @@
   </section>
 
   {% if excerpt %}
-    <a href="{{ post.url }}">Read more&hellip;</a>
+  <a class="read-more" href="{{ post.url }}">Read more&hellip;</a>
   {% endif %}
-
 </article>
