--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,39 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>{% if page.title %}{{ page.title | append: " - " }}{% endif %}{{ site.title }}</title>
-        <meta name="description" content="{{ site.description }}">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>
+      {% if page.title %}{{ page.title | append: " - " }}{% endif %}{{
+      site.title }}
+    </title>
+    <meta name="description" content="{{ site.description }}" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/jumoel.css" />
+    <link rel="stylesheet" href="/css/sourcecode.css" />
+    <link rel="alternate" type="application/rss+xml" href="/feed.xml" />
+  </head>
+  <body>
+    <div class="container">
+      <header class="site-header">
+        {% include header.html %}
+      </header>
+      <main>
+        {{ content }}
+      </main>
 
-        <link rel="stylesheet" href="/css/jumoel.css">
-        <link rel="stylesheet" href="/css/sourcecode.css">
+      <section class="sidebar">
+        <aside class="extras">
+          {% include sidebar.html %}
+        </aside>
 
-        <link rel="stylesheet" href="/css/fonts/charter/webfont.css"> <!-- LICENSE: /css/fonts/charter/license.txt -->
-        <link rel="stylesheet" href="/css/fonts/sourcecode/webfont.css"> <!-- LICENSE: /css/fonts/sourcecode/license.txt -->
-    </head>
-    <body>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            {% include header.html %}
-
-            {{ content }}
-          </div>
-        </div>
-      </div>
-
-      <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-              m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-          ga('create', 'UA-54221542-1', 'auto');
-          ga('send', 'pageview');
-      </script>
-    </body>
+        <aside class="hire-me">
+          {% include advert.html %}
+        </aside>
+      </section>
+    </div>
+  </body>
 </html>
