--- a/_includes/post.html
+++ b/_includes/post.html
@@ -9,6 +9,6 @@
   </section>
 
   {% if excerpt %}
-  <a class="read-more" href="{{ post.url }}">Read more&hellip;</a>
+  <a class="read-more" href="{{ post.url }}">Read more &rarr;</a>
   {% endif %}
 </article>
