--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta
+      name="description"
+      content="The weblog on programming by Julian Møller Ellehauge."
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>
       {% if page.title %}{{ page.title | append: " - " }}{% endif %}{{
