--- a/_includes/post.html
+++ b/_includes/post.html
@@ -5,7 +5,7 @@
   </header>
 
   <section class="post-content">
-    {{ content }}
+    {% if excerpt %} {{ post.excerpt }} {% else %} {{ content }} {% endif %}
   </section>
 
   {% if excerpt %}
