--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,15 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="description"
-      content="The weblog on programming by Julian Møller Ellehauge."
-    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>
       {% if page.title %}{{ page.title | append: " - " }}{% endif %}{{
       site.title }}
     </title>
+    <meta content="{{ site.title }}" property="og:site_name" />
     <meta name="description" content="{{ site.description }}" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
