--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -34,7 +34,7 @@
 <section>
   <b>Other stuff</b>
   <ul class="sidebar-links">
-    <li><a href="/">Frontpage</a></li>
+    <li><a href="/">Home</a></li>
     <li><a href="/feed.xml">RSS feed</a></li>
     <li><a href="/archive/">Full post archive</a></li>
   </ul>
