Make a new, nicer layout!

--- a/_includes/advert.html
+++ b/_includes/advert.html
@@ -1,13 +1,10 @@
-<h3>Need a specialist?</h3>
+<section class="pb-4">
+  <h3 class="font-bold">Need a specialist?</h3>
 
-<p>
-  I'm available for freelancing, consulting and full time positions.
-</p>
-<p>
-  Fully remote or at least 60% remote with on-site in the Copenhagen Area in
-  Denmark. No relocation.
-</p>
-<p>
-  Send a line to <a href="mailto:hire@jumoel.com">hire@jumoel.com</a> to get in
-  touch.
-</p>
+  <p>I'm available for interesting full time positions.</p>
+  <p>Fully remote and able to work from Denmark. No relocation.</p>
+  <p>
+    Send a line to <a href="mailto:hire@jumoel.com">hire@jumoel.com</a> to get
+    in touch.
+  </p>
+</section>
