--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
 {% if site.posts.size > 0 and page.name != "index.html" and page.name !=
 "archive.html" %}
-<section>
+<section class="pb-4">
   <b>Latest posts</b>
 
   <ul class="sidebar-links">
@@ -14,7 +14,7 @@
 </section>
 {% endif %}
 
-<section>
+<section class="pb-4">
   <b>Elsewhere</b>
   <ul class="sidebar-links">
     <li>
@@ -28,7 +28,7 @@
   </ul>
 </section>
 
-<section>
+<section class="pb-4">
   <b>Other stuff</b>
   <ul class="sidebar-links">
     <li><a href="/">Home</a></li>
