--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -11,28 +11,80 @@
     <meta name="description" content="{{ site.description }}" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel="stylesheet" href="/css/jumoel.css" />
-    <link rel="stylesheet" href="/css/sourcecode.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <link rel="alternate" type="application/rss+xml" href="/feed.xml" />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.10.0/styles/atom-one-light.min.css"
+      rel="stylesheet"
+    />
+    <script>
+      function setClass() {
+        document.documentElement.classList.toggle(
+          "dark",
+          localStorage.theme === "dark" ||
+            (!("theme" in localStorage) &&
+              window.matchMedia("(prefers-color-scheme: dark)").matches)
+        );
+      }
+      setClass();
+    </script>
   </head>
-  <body>
-    <div class="container">
-      <header class="site-header">
-        {% include header.html %}
+  <body class="bg-neutral-100 dark:bg-neutral-800 text-neutral-900 dark:text-neutral-300 font-sans min-h-screen">
+    <div class="container max-w-screen-md mx-auto">
+      <header
+        class="text-white p-2 text-lg font-bold mb-4 bg-gradient-to-r from-blue-500 to-purple-500 dark:from-blue-700 dark:to-purple-700"
+      >
+        <section class="">{% include header.html %}</section>
       </header>
-      <main>
-        {{ content }}
+      <main class="grid grid-cols-1 px-4 lg:px-0">
+        <section class="">{{ content }}</section>
+				</main>
+				<footer>
+        <section class="border-t-2 pt-8 border-purple-500">
+          <aside>
+            <section class="pb-4">
+              <b>Theme:</b>
+              <span
+                class="cursor-pointer bg-gradient-to-r from-blue-500 to-purple-500  dark:from-blue-700 dark:to-purple-700 text-white font-bold py-1 px-2 rounded shadow-lg transition duration-300 ease-in-out transform hover:scale-105"
+                id="theme-toggle"
+              ></span>
+            </section>
+          </aside>
+          <aside class="extras">{% include sidebar.html %}</aside>
+
+          <aside class="hire-me">{% include advert.html %}</aside>
+        </section></footer>
       </main>
-
-      <section class="sidebar">
-        <aside class="extras">
-          {% include sidebar.html %}
-        </aside>
-
-        <aside class="hire-me">
-          {% include advert.html %}
-        </aside>
-      </section>
     </div>
+
+    <script>
+      let themeToggle = document.getElementById("theme-toggle");
+
+      function setContent() {
+        let content =
+						localStorage.theme === "dark"
+						? "dark 🌙"
+						: localStorage.theme === "light"
+						? "light ☀️"
+						: "system ✨";
+        themeToggle.textContent = content;
+      }
+
+      function toggleTheme() {
+        if (localStorage.theme === "dark") {
+          localStorage.theme = "light";
+        } else if (localStorage.theme === "light") {
+          localStorage.removeItem("theme");
+        } else {
+          localStorage.theme = "dark";
+        }
+
+        setContent();
+        setClass();
+      }
+
+      setContent();
+      themeToggle.addEventListener("click", toggleTheme);
+    </script>
   </body>
 </html>
