--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,8 +39,8 @@
       <main class="grid grid-cols-1 px-4 lg:px-0">
         <section class="">{{ content }}</section>
 				</main>
-				<footer>
-        <section class="border-t-2 pt-8 border-purple-500">
+				<footer class="border-t-2 pt-8 border-purple-500">
+        <section class="px-4">
           <aside>
             <section class="pb-4">
               <b>Theme:</b>
