--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,9 @@
       setClass();
     </script>
   </head>
-  <body class="bg-neutral-100 dark:bg-neutral-800 text-neutral-900 dark:text-neutral-300 font-sans min-h-screen">
+  <body
+    class="bg-neutral-100 dark:bg-neutral-800 text-neutral-900 dark:text-neutral-300 font-sans min-h-screen"
+  >
     <div class="container max-w-screen-md mx-auto">
       <header
         class="text-white p-2 text-lg font-bold mb-4 bg-gradient-to-r from-blue-500 to-purple-500 dark:from-blue-700 dark:to-purple-700"
@@ -38,14 +40,14 @@
       </header>
       <main class="grid grid-cols-1 px-4 lg:px-0">
         <section class="">{{ content }}</section>
-				</main>
-				<footer class="border-t-2 pt-8 border-purple-500">
-        <section class="px-4">
+      </main>
+      <footer class="border-t-2 pt-8 border-purple-500">
+        <section class="px-4 lg:px-0">
           <aside>
             <section class="pb-4">
               <b>Theme:</b>
               <span
-                class="cursor-pointer bg-gradient-to-r from-blue-500 to-purple-500  dark:from-blue-700 dark:to-purple-700 text-white font-bold py-1 px-2 rounded shadow-lg transition duration-300 ease-in-out transform hover:scale-105"
+                class="cursor-pointer bg-gradient-to-r from-blue-500 to-purple-500 dark:from-blue-700 dark:to-purple-700 text-white font-bold py-1 px-2 rounded shadow-lg transition duration-300 ease-in-out transform hover:scale-105"
                 id="theme-toggle"
               ></span>
             </section>
@@ -53,8 +55,8 @@
           <aside class="extras">{% include sidebar.html %}</aside>
 
           <aside class="hire-me">{% include advert.html %}</aside>
-        </section></footer>
-      </main>
+        </section>
+      </footer>
     </div>
 
     <script>
@@ -62,11 +64,11 @@
 
       function setContent() {
         let content =
-						localStorage.theme === "dark"
-						? "dark 🌙"
-						: localStorage.theme === "light"
-						? "light ☀️"
-						: "system ✨";
+          localStorage.theme === "dark"
+            ? "dark 🌙"
+            : localStorage.theme === "light"
+            ? "light ☀️"
+            : "system ✨";
         themeToggle.textContent = content;
       }
 
