upgrade to tailwind v4

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -11,7 +11,7 @@
   </header>
 
   <section
-    class="post-content prose dark:prose-invert max-w-none prose-a:text-blue-400 before:prose-code:content-none after:prose-code:content-none prose-a:underline-offset-2"
+    class="post-content prose dark:prose-invert max-w-none prose-a:text-blue-400 prose-code:before:content-none prose-code:after:content-none prose-a:underline-offset-2"
   >
     {% if excerpt %} {{ post.excerpt }} {% else %} {{ content }} {% endif %}
   </section>
