--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,9 +32,9 @@
   <body
     class="bg-neutral-100 dark:bg-neutral-800 text-neutral-900 dark:text-neutral-300 font-sans min-h-screen"
   >
-    <div class="container max-w-screen-md mx-auto">
+    <div class="container max-w-(--breakpoint-md) mx-auto">
       <header
-        class="text-white p-2 text-lg font-bold mb-4 bg-gradient-to-r from-blue-500 to-purple-500 dark:from-blue-700 dark:to-purple-700"
+        class="text-white p-2 text-lg font-bold mb-4 bg-linear-to-r from-blue-500 to-purple-500 dark:from-blue-700 dark:to-purple-700"
       >
         <section class="">{% include header.html %}</section>
       </header>
@@ -47,7 +47,7 @@
             <section class="pb-4">
               <b>Theme:</b>
               <span
-                class="cursor-pointer bg-gradient-to-r from-blue-500 to-purple-500 dark:from-blue-700 dark:to-purple-700 text-white font-bold py-1 px-2 rounded shadow-lg transition duration-300 ease-in-out transform hover:scale-105"
+                class="cursor-pointer bg-linear-to-r from-blue-500 to-purple-500 dark:from-blue-700 dark:to-purple-700 text-white font-bold py-1 px-2 rounded-sm shadow-lg transition duration-300 ease-in-out transform hover:scale-105"
                 id="theme-toggle"
               ></span>
             </section>
